# Ejercicios-pareja

./: CMakeLists.txt  README.md
M1/: main.cpp
M2/: CMakeLists.txt  main.cpp
M3/: CMakeLists.txt  main.cpp
M4/: CMakeLists.txt  main.cpp
M5/: CMakeLists.txt  externo.h  main.cpp
M6/: CMakeLists.txt  main.cpp
M7/: CMakeLists.txt  main.cpp
M8/: CMakeLists.txt  main.cpp
