cmake_minimum_required(VERSION 3.26)
project(Ejercicios-pareja)

set(CMAKE_CXX_STANDARD 17)

add_executable(M1 ../M1/main.cpp)
add_executable(M2 ../M2/main.cpp)
add_executable(M3 ../M3/main.cpp)
add_executable(M4 ../M4/main.cpp)
add_executable(M5 ../M5/main.cpp)
add_executable(M6 ../M6/main.cpp)
add_executable(M7 ../M7/main.cpp)
add_executable(M8 ../M8/main.cpp)